# qt5_build_kit

./: .gitignore  CMakeLists.txt  Dockerfile.linux-amd64  Dockerfile.linux-arm64  Dockerfile.linux-i386  Dockerfile.macos-amd64  Dockerfile.macos-arm64  Dockerfile.windows-amd64  Dockerfile.windows-i386  Makefile  README.md  fix-xkbcommon.patch  macos-fix-mkspecs.patch  remove-xinerama.patch
examples/calculator/: main.cpp
examples/dragdroprobot/: main.cpp  robot.cpp  robot.h
examples/lineedits/: lineedits.cpp  lineedits.h  main.cpp
